--- a/frontend/src/Componets/Navbar/navbar.css
+++ b/frontend/src/Componets/Navbar/navbar.css
@@ -1,177 +1,1 @@
-/* Reset styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-img {
-    width: 120px;
-}
-
-nav {
-    width: 100%;
-    background-color: #fff;
-    box-shadow: 0px 0px 5px -2px black;
-    overflow: hidden;
-}
-
-.video {
-    margin-top: 25px;
-}
-
-ul {
-    display: flex;
-    flex-wrap: wrap; /* Allows items to wrap on smaller screens */
-    justify-content: space-between; /* Ensures proper alignment */
-    padding: 10px;
-}
-
-.elem {
-    display: flex;
-    margin-left: 34px;
-    justify-content: space-between;
-    flex-wrap: wrap; /* Wrap items on smaller screens */
-}
-
-ul p {
-    margin: 30px;
-    color: black;
-}
-
-.search {
-    position: relative;
-    margin: 15px auto;
-    text-align: center;
-}
-
-.search i {
-    font-size: 20px;
-    font-weight: 200;
-}
-
-.search input {
-    font-size: 15px;
-    padding: 12px 2px;
-    width: 100%;
-    max-width: 200px;
-    color: black;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    outline: none;
-}
-
-.auth {
-    margin: 1.5rem auto;
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-}
-
-.btn1, .btn2 {
-    color: #078edd;
-    outline: #078edd 2px solid;
-    border: none;
-    width: 100px;
-    margin: 5px;
-    height: 30px;
-    font-size: 16px;
-    border-radius: 4px;
-    text-align: center;
-}
-
-.btn2 {
-    background-color: #078edd;
-    color: white;
-}
-
-.hire, .admin {
-    margin: 20px auto;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.admin button {
-    color: white;
-    outline: #078edd 2px solid;
-    background-color: #078edd;
-    border: none;
-    width: 100px;
-    margin: 5px;
-    height: 30px;
-    font-size: 16px;
-    border-radius: 4px;
-}
-
-.resume {
-    position: relative;
-    top: 25px; /* Adjust this value to bring it down */
-    left:10px
-  }
-
-/* For smaller screens (tablets and mobiles) */
-@media screen and (max-width: 1024px) {
-    .elem {
-        flex-direction: column;
-        margin-left: 0;
-    }
-
-    ul p {
-        margin: 10px;
-        font-size: 14px;
-    }
-
-    .search {
-        margin: 15px 0;
-    }
-
-    .auth {
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-@media screen and (max-width: 768px) {
-    ul {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .search {
-        width: 90%;
-    }
-
-    .btn1, .btn2 {
-        width: 80px;
-        font-size: 14px;
-    }
-
-    img {
-        width: 80px;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    nav ul {
-        flex-direction: column;
-        align-items: flex-start;
-        padding: 0;
-    }
-
-    .elem {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .auth {
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .btn1, .btn2 {
-        width: 100%;
-        margin: 5px 0;
-    }
-}
+*{margin:0;padding:0;box-sizing:border-box}img{width:120px}nav{width:100%;background-color:#fff;box-shadow:0 0 5px -2px #000;overflow:hidden}.video{margin-top:25px}ul{display:flex;flex-wrap:wrap;justify-content:space-between;padding:10px}.elem{display:flex;margin-left:34px;justify-content:space-between;flex-wrap:wrap}ul p{margin:30px;color:#000}.search{position:relative;margin:15px auto;text-align:center}.search i{font-size:20px;font-weight:200}.search input{font-size:15px;padding:12px 2px;width:100%;max-width:200px;color:#000;border:1px solid #ccc;border-radius:4px;outline:none}.auth{margin:1.5rem auto;display:flex;justify-content:space-around;flex-wrap:wrap}.btn1,.btn2{color:#078edd;outline:#078edd 2px solid;border:none;width:100px;margin:5px;height:30px;font-size:16px;border-radius:4px;text-align:center}.btn2{background-color:#078edd;color:#fff}.hire,.admin{margin:20px auto;text-align:center;display:flex;justify-content:center;flex-wrap:wrap}.admin button{color:#fff;outline:#078edd 2px solid;background-color:#078edd;border:none;width:100px;margin:5px;height:30px;font-size:16px;border-radius:4px}.resume{position:relative;top:25px;left:10px}@media screen and (max-width:1024px){.elem{flex-direction:column;margin-left:0}ul p{margin:10px;font-size:14px}.search{margin:15px 0}.auth{flex-direction:column;align-items:center}}@media screen and (max-width:768px){ul{flex-direction:column;align-items:center}.search{width:90%}.btn1,.btn2{width:80px;font-size:14px}img{width:80px}}@media screen and (max-width:480px){nav ul{flex-direction:column;align-items:flex-start;padding:0}.elem{flex-direction:column;align-items:flex-start}.auth{flex-direction:column;width:100%}.btn1,.btn2{width:100%;margin:5px 0}}
