--- a/frontend/src/Componets/resume/resume.css
+++ b/frontend/src/Componets/resume/resume.css
@@ -1,85 +1,1 @@
-.container{
-    height : 100%;
-    width : 100%;
-    /* background-color : red; */
-    position : relative;
-}
-
-.content{
-    position : absolute;
-    top : 0;
-    height : 100%;
-    width :100;
-    top : 59.5vh;
-    left : 11vw;
-    /* background-color : blue; */
-
-}
-
-.content{
-    text-color : red;
-}
-
-.name {
-    position: absolute;
-    top: -115px; /* Adjust vertical position */
-    left: -68px; /* Adjust horizontal position */
-    font-size: 20px;
-    color: #000;
-  }
-
-  .qualification {
-    position: absolute;
-    top: -180px; /* Adjust vertical position */
-    left: -25px; /* Adjust horizontal position */
-    font-size: 20px;
-    color: #333;
-  }
-
-  .experience {
-    position: absolute;
-    white-space: nowrap; /* Prevent text from wrapping */
-
-    top: -151px; /* Adjust vertical position */
-    left: -29px; /* Adjust horizontal position */
-    font-size: 20px;
-    color: #333;
-  }
-
-  .personal {
-    position: absolute;
-    white-space: nowrap; /* Prevent text from wrapping */
-
-    top: -150px; /* Adjust vertical position */
-    left: -20px; /* Adjust horizontal position */
-    font-size: 20px;
-    color: #333;
-  }
-
-  .upload-input {
-    top: -150px; /* Adjust photo vertical position */
-
-    padding: -15px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px; /* Adjust font size */
-  }
-
-  .uploaded-photo {
-    position: absolute;
-    top: -450px; /* Adjust photo vertical position */
-    left: -95px; /* Adjust photo horizontal position */
-    width: 128px;
-    height: 128px;
-    border-radius: 0%;
-  }
-
-  .photo-style {
-    top: 3%; /* Adjust this value */
-    left: 8%; /* Adjust this value */
-    position: absolute; /* Ensure absolute positioning */
-  }
-  
-  
-  
+.container{height:100%;width:100%;position:relative}.content,.name{position:absolute}.content{height:100%;width:100;top:59.5vh;left:11vw;text-color:red}.name{top:-115px;left:-68px;font-size:20px;color:#000}.experience,.personal,.qualification{font-size:20px;color:#333;position:absolute}.qualification{top:-180px;left:-25px}.experience{white-space:nowrap;top:-151px;left:-29px}.personal{white-space:nowrap;top:-150px;left:-20px}.upload-input{top:-150px;border:1px solid #ccc;border-radius:5px;cursor:pointer;font-size:16px}.uploaded-photo{position:absolute;top:-450px;left:-95px;width:128px;height:128px;border-radius:0}.photo-style{top:3%;left:8%;position:absolute}
