--- a/frontend/src/Componets/auth/register.css
+++ b/frontend/src/Componets/auth/register.css
@@ -1,8 +1,1 @@
-h1{
-font-size:  28px;
-font-weight: bolder;
-text-align: center;
-}
-p{
-    text-align: center;
-}
+h1{font-size:28px;font-weight:bolder;text-align:center}p{text-align:center}
